# svpbuild

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: release-recovery.md
src/svpbuild/: __init__.py  main.py  schemas.py
src/svpbuild/builder/: __init__.py  builder.py
src/svpbuild/loader/: __init__.py  character.py  loader.py  types.py
tests/: conftest.py  test_builder_cli.py  test_loader.py
tests/data/sample_pack/: manifest.json
